# Machine_Learning_In_Production

./: .gitignore
I1/: .gitignore  README.md  ai.md  implementation.md
I1/zproject/: urls.py
I2/: README.md  analysis_results.md  fault_tree.md  goals.md  key_results.md  stakeholders_list.md
I2/src/: analyze_risks.py  identify_stakeholders.py  llm_client.py
I3/: .gitignore  I3_agent_security.md  README.md  guarantees.md  hardening.md  security_analysis.md
I4/: .gitignore  compliance.md  explainability.ipynb  explanation_global.md  explanation_local.md  explanation_needs.md  explanation_template.html  explanations.md  todo.md
I4/artifacts/: 75a4343b12f9_report.html  dd90c321d7bc_report.html
lab1/mlip-api-lab-main/: .gitignore  analyze.py  app.py
lab2/: connect_kafka.exp
lab2/mlip-lab-1/: KafkaDemo.ipynb  README.md  bug_list.md  kafka_log.csv
lab3/minGPT_copy/: README.md
lab5/mlip-docker-lab-s26/: README.md  TODO.md  whatwedid.md
lab7/i3-agent-security-and-safety-iambhuvan/: .gitignore  DELIVERABLE3.md  README.md  TASK.md  TODO.md  completed.md  guarantees.md  hardening.md  security_analysis.md  understand.md  violation_logs.txt
lab7/i3-agent-security-and-safety-iambhuvan/python/mcp_tools/: README.md  pyproject.toml
lab7/i3-agent-security-and-safety-iambhuvan/python/mcp_tools/src/mcp_tools/: app.py  server.py  tools.py
lab8/lab8_monitoring/: Lab8_Final_Notes.md  README.md  grafana-dashboard.json  grafana-datasource.json  kafka-monitoring.py
lab9/: .gitignore  README.md  params.yaml
slides/exam2/: MLIP_Exam2_QA.html  MLIP_Exam2_QA.md  (+2 more)
(+40 files in other folders)
