[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tools"
version = "0.1.0"
description = "MCP server with utility tools (current_time, airport_info)"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
start-tools-server = "mcp_tools.app:main"

[tool.setuptools.packages.find]
where = ["src"]
